--- a/FAQ
+++ b/FAQ
@@ -99,6 +99,7 @@ please let me know.
 	/etc/group as I have with libc5 ?
 2.27.	What needs to be recompiled when upgrading from glibc 2.0 to glibc
 	2.1?
+2.28.	Why is extracting files via tar so slow?
 
 3. Source and binary incompatibilities, and what to do about them
 
@@ -1042,6 +1043,21 @@ nss modules, and a few other files.  Together, they should make it
 possible to do development with old static libraries on a glibc 2.1
 system.  This add-on is still in development.  You can get it from <URL>
 but please keep in mind that it is experimental.
+
+
+2.28.	Why is extracting files via tar so slow?
+
+{AJ} Extracting of tar archives might be quite slow since tar has to look up
+userid and groupids and doesn't cache negative results.  If you have nis or
+nisplus in your /etc/nsswitch.conf for the passwd and/or group database,
+each file extractions needs a network connection.  There are two possible
+solutions:
+
+- do you really need NIS/NIS+ (some Linux distributions add by default
+  nis/nisplus even if it's not needed)?  If not, just remove the entries.
+
+- if you need NIS/NIS+, use the Name Service Cache Daemon nscd that comes
+  with glibc 2.1.
 
 
 . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . . 
