--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* version.h (VERSION): Bump to 2.0.112.
 
+	* scripts/versions.awk: Quote { in regexp.
+
 	* sunrpc/clnt_tcp.c (clnttcp_call): Resolve 32-64 comparison
 	conflict for 64 bit platforms.
 	Patch by trott@rottmann.hi.shuttle.de.
