--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-01-31  Mark Kettenis  <kettenis@phys.uva.nl>
+
+	* sysdeps/mach/hurd/times.c: New file.
+
 1999-02-02  Ulrich Drepper  <drepper@cygnus.com>
 
 	* nscd/nscd_getpw_r.c (nscd_getpw_r): Mark as internal and take
