--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-02-02  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
+
+	* manual/time.texi (General Time String Parsing): Fix typos.  Fix
+	column widths of table.
+
 1999-01-31  Mark Kettenis  <kettenis@phys.uva.nl>
 
 	* sysdeps/mach/hurd/times.c: New file.
