--- a/FAQ
+++ b/FAQ
@@ -203,11 +203,11 @@ a local mirror first.
 
 You should always try to use the latest official release.  Older versions
 may not have all the features GNU libc requires.  The current releases of
-egcs (1.0.3 and 1.1) and GNU CC (2.8.1) should work with the GNU C library
-(for powerpc see question 1.5; for ARM see question 1.6).
+egcs (1.0.3 and 1.1.1) should work with the GNU C library (for powerpc see
+question 1.5; for ARM see question 1.6).
 
-{ZW} You may have problems if you try to mix code compiled with
-EGCS and with GCC 2.8.1. See question 2.8 for details.
+{ZW} Due to problems with C++ exception handling, you must use EGCS (any
+version) to compile version 2.1 of GNU libc.  See question 2.8 for details.
 
 
 1.3.	When I try to compile glibc I get only error messages.
@@ -338,7 +338,7 @@ to the root of the 2.2 tree and do `make include/linux/version.h'.
 static arrays is very slow.  The compiler will eventually finish; give it
 time.
 
-The problem is fixed in egcs 1.1 but not in earlier releases.
+The problem is fixed in egcs 1.1.
 
 
 1.10.	When I run `nm -u libc.so' on the produced library I still
@@ -729,8 +729,7 @@ libc.  It doesn't matter what compiler you use to compile your program.
 
 For glibc 2.1, we've chosen to do it the other way around: libc.so
 explicitly provides the EH functions.  This is to prevent other shared
-libraries from doing it.  You must therefore compile glibc 2.1 with EGCS
-unless you don't care about ever importing binaries from other systems.
+libraries from doing it.  You must therefore compile glibc 2.1 with EGCS.
 Again, it doesn't matter what compiler you use for your programs.
 
 
