--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+1999-02-11  Ulrich Drepper  <drepper@cygnus.com>
+
+	* localedata/locale/in_ID: New file.
+
+1999-02-11  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
+
+	* sysdeps/wordsize-64/inttypes.h: Always define ldiv_t if not yet
+	defined.
+
+	* sysdeps/wordsize-32/inttypes.h: Always define lldiv_t if not yet
+	defined.
+
 1999-02-09  Ulrich Drepper  <drepper@cygnus.com>
 
 	* po/el.po: Update from translation team.
