--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,11 +1,16 @@
-1998-12-20  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de> 
- 
-	* Makefile (test-input): Add hr_HR.ISO-8859-2. 
-	(test-input-data): New variable. 
-	(distribute): Use it. 
-	(do-collate-test): Use it. 
-	* hr_HR.in: New file. 
- 
+1999-02-11  Ulrich Drepper  <drepper@cygnus.com>
+
+	* localedata/locale/in_ID: New file.
+	* SUPPORTED: Add in_ID.
+
+1998-12-20  Andreas Schwab  <schwab@issan.cs.uni-dortmund.de>
+
+	* Makefile (test-input): Add hr_HR.ISO-8859-2.
+	(test-input-data): New variable.
+	(distribute): Use it.
+	(do-collate-test): Use it.
+	* hr_HR.in: New file.
+
 1998-12-16  Ulrich Drepper  <drepper@cygnus.com>
 
 	* charmaps/IBM866: New file.
